# mnikiema.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  blog.qmd  index.html  index.qmd  justfile  listings.json  pyproject.toml  styles.css
docs/: Gemfile  Gemfile.bak  _config.yml  about.html  aboutme.md  blog.html  index.html  listings.json  search.json
docs/_posts/: 2023-03-30-welcome-to-jekyll.markdown  2023-08-06-scrap-gdiy.md
docs/posts/gdiy/: 2023-08-06-scrap-gdiy.html
docs/posts/layernorm-rmsnorm/: normalization.html
docs/posts/nvidia_grandmaster_playbook/: kaggle_playbook.html
docs/posts/path_lib/: testing.html
docs/posts/post-with-code/: index.html
docs/posts/prompt_template/: templating.html
docs/posts/welcome/: index.html
docs/site_libs/bootstrap/: bootstrap-2fbe472c07ce080c99d66c0951bdf8ac.min.css  (+2 more)
docs/things_i_learned/: index.html
posts/batching_sbert_lancedb/: sbert_lance.ipynb
posts/custom_reranker_lancedb/: lancedb_custom_reranker.ipynb
posts/from-python-to-rust/: python-to-rust.md
posts/gdiy/: 2023-08-06-scrap-gdiy.html  2023-08-06-scrap-gdiy.md
posts/layernorm-rmsnorm/: normalization.md
posts/post-with-code/: index.qmd
posts/prompt_template/: templating.md
posts/welcome/: index.qmd
site_libs/bootstrap/: bootstrap-dark-43435a9f9e44b84d2657ca4184d21e89.min.css
things_i_learned/: index.qmd
things_i_learned/create_class_with_type/: index.qmd
things_i_learned/hf_trainer_compatible_model/: index.qmd
things_i_learned/pgvector/: index.qmd
things_i_learned/test/: index.qmd
(+27 files in other folders)
