[project]
name = "mnikiema-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
    "lancedb>=0.22.0",
    "msgspec>=0.19.0",
    "optimum[onnxruntime]>=1.25.0",
    "sentence-transformers>=4.1.0",
]
